# FastAPI_CRUD_Study

./: .env  README.md  pyproject.toml  test_connection.py
app/: async_routes.py  database.py  main.py  model_fake.py  models.py  routes.py
app/crud/: album.py
app/database/: memory.py  postgres.py
app/models/: album.py  album_model.py
app/routes/: albums.py
scripts/: create_tables.py
