[project]
name = "music-api-study"
version = "0.1.0"
description = ""
authors = [
    {name = "FilipeMadeira13",email = "cfilipemadeira@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
